Fix spelling errors and image overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,14 @@
-.top-container 
-{
-    background: linear-gradient(#C3F8FF, white);
-    display: block;
-    padding: 5%;
-    position: relative;
-    padding-top: 50px;
-}
-.main-page-image
-{
-    width: 85%;
-}
+/* Links and Headers */
 a:hover
 {
     color: darkblue !important;
 }
-.middle-container
+h1
 {
-    background-color: white;
+    line-height: 2;
+    margin-top: 50px;
+    font-size: 6rem;
+    font-family: 'Parisienne', cursive;
 }
 h2
 {
@@ -55,10 +47,10 @@ a:not(.main-link, .btn), h3
     padding: 10px 20px 10px 20px;
     border: solid #00568c 4px;
     text-decoration: none;
-  }
-  
-  .btn:hover
-  {
+}
+
+.btn:hover
+{
     background: #c7eaff;
     background-image: -webkit-linear-gradient(top, #c7eaff, #85ceff);
     background-image: -moz-linear-gradient(top, #c7eaff, #85ceff);
@@ -67,11 +59,24 @@ a:not(.main-link, .btn), h3
     background-image: linear-gradient(to bottom, #c7eaff, #85ceff);
     text-decoration: none;
 }
+/* Containers */
+.top-container 
+{
+    background: linear-gradient(#C3F8FF, white);
+    display: block;
+    padding: 5%;
+    position: relative;
+    padding-top: 50px;
+}
+.middle-container
+{
+    background-color: white;
+}
 .bottom-container
 {
     background-color: #66BFBF;
-    padding: 2%;
-    margin-top: 2%;
+    padding: 3%;
+    margin-top: 3.5%;
 
 }
 .bottom-container a:not(.btn)
@@ -94,13 +99,8 @@ body
 {
     padding-bottom: 2%;
 }
-h1
-{
-    line-height: 2;
-    margin-top: 50px;
-    font-size: 6rem;
-    font-family: 'Parisienne', cursive;
-}
+
+/* Bio Summary */
 .bio-line
 {
     font-size: 2.5rem;
@@ -112,6 +112,7 @@ h1
 {
     color: #66BFBF;
 }
+/* Clouds */
 .bottom-cloud
 {
     width: 15%;
@@ -119,12 +120,6 @@ h1
     position: absolute;
     left: 5%;
     bottom: 50%;
-}
-table
-{
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
 }
 .top-cloud
 {
@@ -134,6 +129,14 @@ table
     right: 5%;
     top: 10%;
 }
+/* Tables, lists and paragraphs */
+table
+{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
 p, td, th, a:not(.main-link), h4, ul
 {
     font-family: 'Gruppo', cursive;
@@ -159,10 +162,8 @@ hr
     width: 12%;
     border-width: 15px 0 0 0;
 }
-.example-image
-{
-    border: 2px solid black;
-}
+
+/* Homepage sections */
 .programming-languages, .code-editors
 {
     width: 30%;
@@ -172,6 +173,11 @@ hr
 {
     width: 20%;
     height: 20%;
+}
+/* Images */
+.main-page-image
+{
+    width: 85%;
 }
 .profile-picture
 {
@@ -183,20 +189,9 @@ hr
     border: 5px solid #FFEBAD;
     border-collapse: collapse;
 }
-.programming-experience-table th
+.example-image
 {
-    background-color: #FFF6BF !important;   
-    text-align: center;
-}
-.programming-experience-table
-{
-    width: 80%;
-}
-.programming-experience-table td, .programming-experience-table th, .programming-experience-table
-{
-    background-color: white;
-    border: 1px solid black;
-    border-collapse: collapse;
+    border: 2px solid black;
 }
 .skill-row
 {
@@ -204,11 +199,12 @@ hr
     margin: 40px auto;
 }
 
-/* Project Cards*/
+/* Project Cards */
 .project-card-description
 {
     font-size: medium;
 }
+
 .project-link
 {
     margin: 1rem 0;
@@ -281,6 +277,7 @@ hr
     margin-top: 2.5%;
 }
 
+/* Media Queries */
 @media (max-width: 1200px)
 {
     .rotate-btn
@@ -324,8 +321,12 @@ hr
     {
         height: 400px;
     }
-    .flip-card-back .card-img-top
+    .code-sample-img
     {
-        height: 450px;
+        max-height: 480px;
+    }
+    .code-sample
+    {
+        height: fit-content;
     }
 }
